Fix: list viewer alignment and scrollbar style.

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,26 @@
     box-sizing: border-box;
 }
 
+/* SCROLLBAR */
+::-webkit-scrollbar {
+    width: 0.5rem;
+    height: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+    border: 1px solid #ededed;
+    background-color: #fafafa;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 0px;
+    background-color: #c2c2c2;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #555555;
+}
+
 /* GENERAL */
 body {
     width: 100%;
@@ -135,10 +155,10 @@ pre {
 #copy-code-button {
     position: absolute;
     top: 0;
-    right: 0;
+    right: 0.5rem;
     padding: 0.5rem;
     text-transform: uppercase;
-    border: none;
+    border: 1px solid black;
     border-radius: 0;
     cursor: pointer;
 }
@@ -157,9 +177,8 @@ pre {
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
-    scrollbar-gutter: stable;
     overflow-x: scroll;
     overflow-y: hidden;
     border: 1px solid black;
